--- a/blocks/menu.twig
+++ b/blocks/menu.twig
@@ -1,13 +1,47 @@
-<div class="gm-menus bg-{{ background_color }} text-{{ text_color }}">
+<div class="gm-menus">
 	{%if title_list_menus != '' %}
 	<h2 class="gm-menus-title">{{ title_list_menus }}</h2>
+	{% endif %} {% if posts|length > 1 %}
+	<div class="gm-menu-arrow-container">
+		<button class="gm-menu-arrow-previous">
+			<span>{{ __("previous", "goodmotion-theme") }}</span>
+		</button>
+		<button class="gm-menu-arrow-next">
+			<span>{{ __("next", "goodmotion-theme") }}</span>
+		</button>
+	</div>
 	{% endif %}
 	<div class="gm-menus-list">
-		{% for menu in posts %}
-		<div class="gm-menus-list-element">
-			<h3 class="gm-menus-list-element-title">{{ menu.title }}</h3>
-			<div>{{ menu.content }}</div>
+		{%if isAdmin == true %}
+		<div>
+			{% endif %} {% for menu in posts %}
+			<div
+				class="gm-menus-list-element has-{{
+					background_color
+				}}-background-color has-{{ text_color }}-color"
+			>
+				<h3 class="gm-menus-list-element-title">{{ menu.title }}</h3>
+				<div class="gm-menus-list-element-content">{{ menu.content }}</div>
+				<div class="gm-menu-border-top has-{{ text_color }}-border"></div>
+				<div class="gm-menu-border-bottom has-{{ text_color }}-border"></div>
+			</div>
+			{% endfor %} {%if isAdmin == true %}
+		</div>{% endif %}</div>
+			{% if posts|length > 1 %}
+			<div role="tablist" class="gm-menu-dot-container">
+				{% for key, item in posts %}
+				<button
+					role="tab"
+					tabindex="-1"
+					aria-selected="false"
+					aria-controls="carousel-{{ key }}"
+					class="gm-menu-dot"
+				>
+					<span>{{ __("image", "goodmotion-theme") }} {{ key + 1 }}</span>
+				</button>
+				{% endfor %}
+			</div>
+			{% endif %}
 		</div>
-		{% endfor %}
 	</div>
 </div>
